bug fix: openstack sidebar no longer shifts position of icons and text; also fixed single pixel showing when collapsed

--- a/range_monitor/plugins/openstack/static/css/components/sidebar.css
+++ b/range_monitor/plugins/openstack/static/css/components/sidebar.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     height: 100vh;
     width: 250px;
-    padding: 5px, 1em;
     background-color: var(--base-clr);
     border-right: 1px solid var(--line-clr);
     position: sticky;
@@ -14,8 +13,7 @@
 }
 
 #sidebar.close {
-    padding: 5px;
-    width: 60px;
+    width: 54px;
 }
 
 #sidebar ul {
